--- a/src/courses/UXR/UXR.csproj
+++ b/src/courses/UXR/UXR.csproj
@@ -79,6 +79,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Slides\dictionary.txt" />
     <Content Include="Slides\L000 - Введение в Usability\S099 - Quiz.quiz.xml" />
     <Content Include="Slides\L000 - Введение в Usability\Title.txt" />
     <Content Include="Slides\L010 - Сбор первичной информации\S999 - Quiz.quiz.xml" />
