--- a/src/uLearn.Web/packages.config
+++ b/src/uLearn.Web/packages.config
@@ -41,6 +41,8 @@
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Sendgrid" version="6.1.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.3.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
