--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -136,6 +136,14 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Owin.1.0\lib\net40\Owin.dll</HintPath>
     </Reference>
+    <Reference Include="SendGrid.SmtpApi, Version=1.3.1.0, Culture=neutral, PublicKeyToken=2ae73662c35d80e4, processorArchitecture=MSIL">
+      <HintPath>..\packages\SendGrid.SmtpApi.1.3.1\lib\net40\SendGrid.SmtpApi.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="SendGridMail, Version=6.1.0.0, Culture=neutral, PublicKeyToken=2ae73662c35d80e4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sendgrid.6.1.0\lib\SendGridMail.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable, Version=1.1.36.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <Private>True</Private>
@@ -238,6 +246,7 @@
     <Compile Include="codemirror\CsCompleterGenerator.cs" />
     <Compile Include="Controllers\ControllerUtils.cs" />
     <Compile Include="Controllers\QuestionsController.cs" />
+    <Compile Include="Controllers\RestorePasswordController.cs" />
     <Compile Include="Controllers\RunnerController.cs" />
     <Compile Include="Controllers\SandboxController.cs" />
     <Compile Include="Controllers\UnitController.cs" />
@@ -248,6 +257,7 @@
     <Compile Include="Controllers\HintController.cs" />
     <Compile Include="DataContexts\ConsumersRepo.cs" />
     <Compile Include="DataContexts\LtiRequestsRepo.cs" />
+    <Compile Include="DataContexts\RestoreRequestRepo.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
     <Compile Include="DataContexts\UnitsRepo.cs" />
     <Compile Include="LTI\LtiAuthenticationExtensions.cs" />
@@ -285,12 +295,18 @@
     <Compile Include="Migrations\201509021133351_AddInfoAboutStudent.Designer.cs">
       <DependentUpon>201509021133351_AddInfoAboutStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201510070841240_RestorePassword.cs" />
+    <Compile Include="Migrations\201510070841240_RestorePassword.Designer.cs">
+      <DependentUpon>201510070841240_RestorePassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\BlockRenderContext.cs" />
     <Compile Include="Models\LtiQuizModel.cs" />
     <Compile Include="Models\LtiSlideRequest.cs" />
     <Compile Include="Models\CodeModel.cs" />
     <Compile Include="Models\LtiConsumer.cs" />
     <Compile Include="Models\ExerciseBlockData.cs" />
+    <Compile Include="Models\RestorePasswordModels.cs" />
+    <Compile Include="Models\RestoreRequest.cs" />
     <Compile Include="Models\SubmissionListModel.cs" />
     <Compile Include="Models\SubmissionsModel.cs" />
     <Compile Include="Models\TocModelBuilder.cs" />
@@ -552,6 +568,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509021133351_AddInfoAboutStudent.resx">
       <DependentUpon>201509021133351_AddInfoAboutStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201510070841240_RestorePassword.resx">
+      <DependentUpon>201510070841240_RestorePassword.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1114,6 +1133,8 @@
     <Content Include="Views\Account\StudentInfo.cshtml" />
     <Content Include="Views\Shared\_GroupsPrompt.cshtml" />
     <Content Include="Views\Unit\SpellingErrors.cshtml" />
+    <Content Include="Views\RestorePassword\Index.cshtml" />
+    <Content Include="Views\RestorePassword\SetNewPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
