add file private.settings for appSettigs

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -18,7 +18,7 @@
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	<appSettings>
+	<appSettings file="private.settings">
 		<add key="runnerToken" value="F9388330-FF77-41B4-9011-1785F780C1CF" />
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
