--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -14,7 +14,7 @@
 			<section name="errorMail" requirePermission="false" type="Elmah.ErrorMailSectionHandler, Elmah" />
 			<section name="errorFilter" requirePermission="false" type="Elmah.ErrorFilterSectionHandler, Elmah" />
 		</sectionGroup>
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+	</configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=db;Integrated Security=True" providerName="System.Data.SqlClient" />
 	</connectionStrings>
@@ -32,6 +32,7 @@
 		<add key="elmah.mvc.allowedRoles" value="*" />
 		<add key="elmah.mvc.allowedUsers" value="*" />
 		<add key="elmah.mvc.route" value="elmah" />
+		<add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
 	</appSettings>
 	<system.web>
 		<authentication mode="None" />
@@ -53,9 +54,6 @@
 	<system.webServer>
 		<modules>
 			<remove name="FormsAuthenticationModule" />
-
-
-
 			<add name="ErrorLog" type="Elmah.ErrorLogModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorMail" type="Elmah.ErrorMailModule, Elmah" preCondition="managedHandler" />
 			<add name="ErrorFilter" type="Elmah.ErrorFilterModule, Elmah" preCondition="managedHandler" />
@@ -74,12 +72,13 @@
 			</requestFiltering>
 		</security>
 		<validation validateIntegratedModeConfiguration="false" />
-	<handlers>
-      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
-      <remove name="TRACEVerbHandler" />
-      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+		<handlers>
+			<remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+			<remove name="OPTIONSVerbHandler" />
+			<remove name="TRACEVerbHandler" />
+			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+		</handlers>
+	</system.webServer>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<dependentAssembly>
@@ -92,11 +91,11 @@
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+				<bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
 			</dependentAssembly>
 			<dependentAssembly>
 				<assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
