add custom roles system

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -274,7 +274,14 @@
     <Compile Include="DataContexts\RestoreRequestRepo.cs" />
     <Compile Include="DataContexts\TextsRepo.cs" />
     <Compile Include="DataContexts\UnitsRepo.cs" />
+    <Compile Include="DataContexts\UserRolesRepo.cs" />
     <Compile Include="FilterAttributes\PostAuthorizeAttribute.cs" />
+    <Compile Include="Migrations\201512211221278_CustomRoleSystem.cs" />
+    <Compile Include="Migrations\201512211221278_CustomRoleSystem.Designer.cs">
+      <DependentUpon>201512211221278_CustomRoleSystem.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserModel.cs" />
+    <Compile Include="UserExtentions.cs" />
     <Compile Include="LTI\LtiAuthenticationExtensions.cs" />
     <Compile Include="LTI\LtiUtils.cs" />
     <Compile Include="LTI\SecurityHandler.cs" />
@@ -445,6 +452,7 @@
       <DependentUpon>201408201208379_AddIsRightQuizBlock.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\UserCourseModel.cs" />
+    <Compile Include="Models\UserRole.cs" />
     <Compile Include="Models\WebCourseManager_should.cs" />
     <Compile Include="Views\Course\AcceptedSolutionsHtml.generated.cs">
       <AutoGen>True</AutoGen>
@@ -603,6 +611,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201512141043098_ChangeVisitsIndex.resx">
       <DependentUpon>201512141043098_ChangeVisitsIndex.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201512211221278_CustomRoleSystem.resx">
+      <DependentUpon>201512211221278_CustomRoleSystem.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -981,6 +992,7 @@
     <Content Include="Scripts\slide-utils.js" />
     <Content Include="Scripts\table-configurator.js" />
     <Content Include="Scripts\user-group-name-change.js" />
+    <Content Include="Scripts\users-list.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="tablesorter-master\.gitattributes" />
     <Content Include="tablesorter-master\.gitignore" />
