fixes and refactoring

--- a/src/uLearn.Web/Web.config
+++ b/src/uLearn.Web/Web.config
@@ -165,7 +165,7 @@
 		<!-- Управление доступом в самой Elmah не работает :( https://github.com/alexanderbeletsky/elmah-mvc/issues/28 -->
 		<system.web>
 			<authorization>
-				<allow roles="admin" />
+				<allow roles="SysAdmin" />
 				<deny users="*" />
 			</authorization>
 		</system.web>
