1. Users now see only those comments' actions which they can perform 2. Instructost now can pin/unpin comments and mark replies them as a correct answer 3. Ordinar user now can't see not-aproved comments unless it's published by him 4. Instructors and course admins now can change course policy on /Unit/Comments 5. Reply form's are shown regard comment policy 6. Instructors' replies are approving and marking as correct automatically 7. User can remove his comments and replies

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1298,6 +1298,7 @@
     <Content Include="Views\Unit\Diagnostics.cshtml" />
     <Content Include="Views\Comments\SlideComments.cshtml" />
     <Content Include="Views\Comments\_Comment.cshtml" />
+    <None Include="Views\Unit\Comments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
