--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -315,6 +315,10 @@
     <Compile Include="Migrations\201602190847123_AddComments42.Designer.cs">
       <DependentUpon>201602190847123_AddComments42.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602262009374_AddComments5.cs" />
+    <Compile Include="Migrations\201602262009374_AddComments5.Designer.cs">
+      <DependentUpon>201602262009374_AddComments5.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentLike.cs" />
     <Compile Include="Models\CommentPolicy.cs" />
@@ -715,6 +719,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602190847123_AddComments42.resx">
       <DependentUpon>201602190847123_AddComments42.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602262009374_AddComments5.resx">
+      <DependentUpon>201602262009374_AddComments5.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1222,7 +1229,6 @@
     <Content Include="Views\Course\Slide.cshtml" />
     <Content Include="Views\SlideNavigation\PrevNextButtons.cshtml" />
     <Content Include="Views\Course\AcceptedSolutions.cshtml" />
-    <Content Include="Views\Course\_AskBar.cshtml" />
     <Content Include="Views\Analytics\TotalStatistics.cshtml" />
     <Content Include="Views\Course\_RatesBar.cshtml" />
     <Content Include="Views\Analytics\UsersStatistics.cshtml" />
