1. User has avatar now. If avatar's url is empty we use first letter in random-color square 2. "Имя (логин)" has been replaced to "Логин" in models 3. ApplicationUser.VisibleName is "FirstName LastName" or "Пользователь" if first is empty 4. Comments' reply forms are full-width, mobile device friendly

--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -291,6 +291,10 @@
     <Compile Include="Migrations\201602291854260_AddComments.Designer.cs">
       <DependentUpon>201602291854260_AddComments.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201602291950318_AddUserAvatars.cs" />
+    <Compile Include="Migrations\201602291950318_AddUserAvatars.Designer.cs">
+      <DependentUpon>201602291950318_AddUserAvatars.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\CommentLike.cs" />
     <Compile Include="Models\CommentPolicy.cs" />
@@ -673,6 +677,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201602291854260_AddComments.resx">
       <DependentUpon>201602291854260_AddComments.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201602291950318_AddUserAvatars.resx">
+      <DependentUpon>201602291950318_AddUserAvatars.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
@@ -1255,6 +1262,7 @@
     <Content Include="Views\Unit\Diagnostics.cshtml" />
     <Content Include="Views\Comments\SlideComments.cshtml" />
     <Content Include="Views\Comments\_Comment.cshtml" />
+    <Content Include="App_Code\UserAvatar.cshtml" />
     <None Include="Views\Unit\Comments.cshtml" />
   </ItemGroup>
   <ItemGroup>
