--- a/src/uLearn.Web/uLearn.Web.csproj
+++ b/src/uLearn.Web/uLearn.Web.csproj
@@ -1265,6 +1265,7 @@
     <Content Include="Views\Comments\SlideComments.cshtml" />
     <Content Include="Views\Comments\_Comment.cshtml" />
     <Content Include="App_Code\UserAvatar.cshtml" />
+    <Content Include="Views\Comments\_CommentText.cshtml" />
     <None Include="Views\Unit\Comments.cshtml" />
   </ItemGroup>
   <ItemGroup>
